fixed alignment of select date finally

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -38,10 +38,10 @@ input[type="submit"][value="+"] { padding: 7px 12px; }
 input#task_submit { display: inline-block; }
 .taskEntry { width:500px;font-family:verdana; font-size:12px; border:5px solid black;}
 #addTaskDiv {display: inline-block; }
-.ui-datepicker-trigger { margin: 0; font-size: 25px; display: inline-block; padding: 7px; border: 0; color: #555; background-color: #cde; text-align: center; cursor: pointer; }
 #hide, #show { text-align:center; background:#ccddee; color:#555555; width:120px;padding:4px; }
 .duration { visibility:hidden; width:1px; position:absolute; }
 .buttons { margin:90px; }
-#dateNav { display: inline-block; -moz-border-radius:6px; -webkit-border-radius:6px; background-color: #cde; font-family: verdana; }
-#dateNav a { margin: 0; text-decoration: none; color: #000; font-size: 30px; font-weight: bold; padding: 1px 5px 7px 5px; color:#666;}
+#dateNav { display: inline-block; -moz-border-radius:6px; -webkit-border-radius:6px; background-color: #cde; font-family: georgia; padding: 0; }
+#dateNav a { display: inline-block; margin: 0; text-decoration: none; color: #000; font-size: 30px; font-weight: bold; padding: 1px 5px 7px 5px; color:#666;}
+.ui-datepicker-trigger { display: inline-block; margin: 0; font-size: 25px; display: inline-block; padding: 7px; border: 0; color: #555; background-color: #cde; text-align: center; cursor: pointer; }
 #minutes { font-family:georgia; font-size:28px; }
